# skg-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  smithery.yaml
notebook/: mcp_client_test.ipynb  mcp_test.ipynb  sudo_kg_http_server_playground.ipynb  sudo_kg_tool_playground.ipynb
scripts/: test_sudo_kg_tools.py
src/: server.py
src/embedder/: base.py  factory.py  lms.py  openai.py
src/llm/: base.py  llama_cpp_direct.py  lm_studio.py  lms_gpt.py  lmstudio_qwen35.py  nim.py
src/skg_mcp/: __init__.py  __main__.py  backend.py  client.py  mock_backend.py  models.py  server.py  sudo_backend.py
