[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skg-mcp"
version = "0.1.0"
description = "Formal MCP server for scholarly knowledge graph access"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SKG MCP Contributors" }]
dependencies = [
    "mcp[cli]>=1.4.1",
    "pydantic>=2.7.0",
    "httpx>=0.28.1",
    "pymilvus>=2.5.0",
    "openai>=1.0.0",
]

[project.scripts]
skg-mcp = "skg_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
test = [
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "llama-index>=0.14.21",
    "llama-index-llms-langchain>=0.8.0",
    "llama-index-llms-openai>=0.7.5",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-tools-mcp>=0.4.8",
    "lmstudio>=1.5.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
]
